@@ -828,7 +828,7 @@ void sg_actor_data_set(sg_actor_t actor, void* userdata)
  *  The on_exit functions are the functions executed when your process is killed.
  *  You should use them to free the data used by your process.
  */
-void sg_actor_on_exit(int_f_int_pvoid_t fun, void* data)
+void sg_actor_on_exit(void_f_int_pvoid_t fun, void* data)
 {
   simgrid::s4u::this_actor::on_exit([fun, data](bool failed) { fun(failed ? 1 /*FAILURE*/ : 0 /*SUCCESS*/, data); });
 }
